2005-02-10 Magnus Hagdorn
 * merged in autotools

2005-01-10 Ian Rutt
 * Merge part 3 - fixed glint build, under windows and Linux
 * Removed redundant files
 * renamed routing code in the glint series

2005-02-10 Magnus Hagdorn
 * merged documentation

2005-02-10 Ian Rutt
 * Merge part 2 - partial fixing of GLINT so it compiles under Windows. Linux build
   not fixed yet. Redundant files not removed either.

2005-02-10 Magnus Hagdorn
 * set default log level so that only errors are reported to stdout
 * added new parameter log_level

2005-02-10 Magnus Hagdorn
 * glimmer_log: improved logging by allowing various severety levels (merged in Ian's implementation)
 * hooked up logging (Makefile, bin2ncdf.f90, glide_pdd.f90, glide_setup.f90, glimmer_CFproj.f90, glimmer_config.f90,
	glimmer_ncdf.f90, glimmer_ncparms.f90, glimmer_ts.f90, glimmer_utils.f90, gmt.f90, input2ncdf.f90, simple_forcing.f90,
	generate_ncvars.py)
 * removed obsolete netCDF stuff and isostasy code

2005-02-09 Magnus Hagdorn
 * merged in new stuff part 1

2005-02-08 Magnus Hagdorn
 * fixed Makefile to include flow router

2005-02-08 Ian Rutt
 * Removed NAG-non-compliant section and value name checking from glimmer_setup.f90

2005-01-31 Ian Rutt
 * Reverted last change, since it was based on a misunderstanding. _No_ fields are spliced
   into the input - the splicing takes place as the output fields are prepared from the outputs
   of the individual instances.

2005-01-26 Ian Rutt
 * Changed water flux fields so they replace the input rather than being spliced into it

2005-01-18 Ian Rutt
 * Plumbed in flow-routing code (and corrected a bug)

2005-01-17 Ian Rutt
 * Added flow-routing code for run-off calculation. Not connected yet. Removed 
   old (unused) routing code.

2005-01-12 Ian Rutt
 * Restored .in files and generate_ncvars.py, but not as part of build
   structure, to enable system to still be used for development, but not as
   part of build