@@ -1,1 +1,4 @@
-SUBDIRS = doc src
+if BUILD_DOCS
+  DOC_DIR = doc
+endif
+SUBDIRS = src $(DOC_DIR)
