@@ -1,6 +1,4 @@
 EXTRA_DIST = class_diagram.dia class_diagram.eps
-if MAINTAINER_MODE
- BUILT_SOURCES = class_diagram.eps
- CLEANFILES = $(BUILT_SOURCES)
-endif
+BUILT_SOURCES = class_diagram.eps
+CLEANFILES = $(BUILT_SOURCES)
 include $(top_srcdir)/doc/make_doc.rules
