@@ -1,10 +1,8 @@
 EXTRA_DIST = eis_varlist.tex glide_varlist.tex glint_varlist.tex intro.tex paramfiles.tex varlist.tex drivers.tex  example.tex \
              glide.tex glimmer_api.tex installation.tex ug.tex varlist.tex.in
 
-if MAINTAINER_MODE
- BUILT_SOURCES = glide_varlist.tex eis_varlist.tex glint_varlist.tex
- CLEANFILES = $(BUILT_SOURCES)
-endif
+BUILT_SOURCES = glide_varlist.tex eis_varlist.tex glint_varlist.tex
+CLEANFILES = $(BUILT_SOURCES)
 
 SUBDIRS = figs
 
