@@ -1,7 +1,5 @@
 graphics = glide.eps glimmer.eps
 EXTRA_DIST = glide.dia glimmer.dia $(graphics)
-if MAINTAINER_MODE
- BUILT_SOURCES = $(graphics)
- CLEANFILES = $(BUILT_SOURCES)
-endif
+BUILT_SOURCES = $(graphics)
+CLEANFILES = $(BUILT_SOURCES)
 include $(top_srcdir)/doc/make_doc.rules
