@@ -1,3 +1,7 @@
+2005-02-15 Magnus Hagdorn
+ * bootstrap: require version 1.9 of automake
+ * configure.in and various Makefile.am: make doc built optional
+	
 2005-02-10 Magnus Hagdorn
  * merged in autotools
 
